cahnges in structure

--- a/Datenschutz.html
+++ b/Datenschutz.html
@@ -5,22 +5,22 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <script src="data.js"></script>
         <link rel="stylesheet" type="text/css" href="stylesheet.css" />
-        <title>Home</title>
+        <title>Datenschutz</title>
         <link rel="icon" type="image/jpg"
               href="icon.png">
     </head>
     <body>
         <header>
-            <h1> Homepage &#160 &#160 &#160 &#160 &#160</h1>
-
+            <h1> Datenschutz &#160 &#160 &#160 &#160 &#160</h1>
             <select id="mainselect">
-                <option value="(Auswahl)" selected ="selected">Home</option>
+                <option value="(Auswahl)" selected ="selected">(Auswahl)</option>
+                <option value="Homepage.html">Home</option>
                 <option value="not_available.html">Wetterkarte</option>
             </select>
         </header>
 
         <main>
-            <p>Test</p>
+            <p><center>Hier finden sie demnächst die Datenschutzerkärung</center></p>
         </main>
 
         <footer>
