--- a/Impressum.html
+++ b/Impressum.html
@@ -16,7 +16,6 @@
                 <option value="(Auswahl)" selected ="selected">(Auswahl)</option>
                 <option value="Homepage.html">Home</option>
                 <option value="not_available.html">Wetterkarte</option>
-                <option value="https://youtu.be/dQw4w9WgXcQ">Hacking</option>
             </select>
         </header>
 
@@ -40,8 +39,8 @@
                     <br>
                     <br>  
                     <h3>Kontaktaufnahme:</h3>
-    
-                    E-Mail: pu-ol@gmx.de
+                    <br>
+                    <p>Bei Fragen oder Anregungen bitte</p><h4>per E-Mail an:&#160 &#160 <b><a href="mailto:pu-ol@gmx.de">pu-ol@gmx.de</a></b></h4>
                     <br>
                     <br>  
                     <h2>Verantwortlicher gemäß § 55 Abs. 2 RStV</h2>
@@ -49,14 +48,10 @@
                     <h4> Philipp Uhlendorf </h4>
                     <br>
                     <br>    
-    
-                    Plattform der EU-Kommission zur Online-Streitbeilegung: https://ec.europa.eu/consumers/odr 
+                    Plattform der EU-Kommission zur Online-Streitbeilegung: <a href="https://www.ec.europa.eu/consumers/odr ">ec.europa.eu/consumers/odr </a>
                     <br>
                     <br>
                     Der Ersteller dieser Webseite ist weder zur Teilnahme an einem Streitbeilegungsverfahren vor einer Verbraucherschlichtungsstelle  verpflichtet noch bereit.
-                    <br>
-                    <br>
-                    <h4>Bei Fragen oder Anregungen bitte per E-Mail an:&#160 &#160 <b><a href="mailto:pu-ol@gmx.de">pu-ol@gmx.de</a></b></h4>
                     <br>
                     <br>  
                     <h2>Haftungsausschluss:</h2>
@@ -73,7 +68,7 @@
             </p>
             <p>&copy; 2024 Philipp Uhlendorf</p>
             <p>
-                <a href="">AGBs und Datenschutz</a>
+                <a href="Datenschutz.html">Datenschutz</a>
             </p>
         </footer>
 
