--- a/html/Homepage.html
+++ b/html/Homepage.html
@@ -3,11 +3,11 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <script src="data.js"></script>
-        <link rel="stylesheet" type="text/css" href="stylesheet.css" />
+        <script src="..//js/data.js"></script>
+        <link rel="stylesheet" type="text/css" href="..//CSS/stylesheet.css" />
         <title>Home</title>
         <link rel="icon" type="image/jpg"
-              href="icon.png">
+              href="..//pictures/icon.png">
     </head>
     <body>
         <header>
@@ -15,7 +15,7 @@
 
             <select id="mainselect">
                 <option value="(Auswahl)" selected ="selected">Home</option>
-                <option value="not_available.html">Wetterkarte</option>
+                <option value="..//html/not_available.html">Wetterkarte</option>
             </select>
         </header>
 
@@ -25,11 +25,11 @@
 
         <footer>
             <p>
-                <a href="Impressum.html">Impressum</a>
+                <a href="..//html/Impressum.html">Impressum</a>
             </p>
             <p>&copy; 2024 Philipp Uhlendorf</p>
             <p>
-                <a href="Datenschutz.html">Datenschutz</a>
+                <a href="..//html/Datenschutz.html">Datenschutz</a>
             </p>
         </footer>
     
