--- a/html/not_available.html
+++ b/html/not_available.html
@@ -9,9 +9,9 @@
 
     <body>
         <section>
-            <center><img src="in-progress.png"></center>
+            <center><img src="..//pictures/in-progress.png"></center>
             <h1><b><center>404 NOT FOUND</center></b></h1>
-            <p><center><br><a href="Homepage.html">Back</a></center></p>
+            <p><center><br><a href="..//html/Homepage.html">Back</a></center></p>
         </section>
 
 
