--- a/html/Homepage.html
+++ b/html/Homepage.html
@@ -17,10 +17,14 @@
                 <option value="(Auswahl)" selected ="selected">Home</option>
                 <option value="..//html/not_available.html">Wetterkarte</option>
             </select>
+            <div id="lougouta">
+                <input type="submit" name="submit" class="btn-primary" value="Abmelden" id="logout">
+            </div>
         </header>
 
         <main>
             <p>Test</p>
+            <a href="../php/logout.php" class="btn btn-secondary btn-lg active" role="button" aria-pressed="true">Abmelden</a>
         </main>
 
         <footer>
@@ -38,6 +42,9 @@
             Auswahl.addEventListener("change", function(){
              if(Auswahl.value != "(Auswahl)")
              location.href =Auswahl.value;})  
+
+            const logoutb = document.getElementById('logout');
+            logoutb.addEventListener("click", sendenlogout);
         </script>
     </body>
 </html>
