--- a/html/Impressum.html
+++ b/html/Impressum.html
@@ -3,19 +3,19 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <script src="..//js/data.js"></script>
-        <link rel="stylesheet" type="text/css" href="..//CSS/stylesheet.css" />
+        <script src="../js/data.js"></script>
+        <link rel="stylesheet" type="text/css" href="../CSS/stylesheet.css" />
         <title>Impressum</title>
         <link rel="icon" type="image/jpg"
-              href="..//pictures/icon.png">
+              href="../pictures/icon.png">
     </head>
     <body>
         <header>
             <h1><b>Impressum &#160 &#160 &#160 &#160 &#160</b></h1>
             <select id="mainselect">
                 <option value="(Auswahl)" selected ="selected">(Auswahl)</option>
-                <option value="..//html/Homepage.html">Home</option>
-                <option value="..//html/not_available.html">Wetterkarte</option>
+                <option value="../html/Homepage.html">Home</option>
+                <option value="../html/not_available.html">Wetterkarte</option>
             </select>
         </header>
 
@@ -64,11 +64,11 @@
 
         <footer>
             <p>
-                <a href="..//html/Impressum.html">Impressum</a>
+                <a href="../html/Impressum.html">Impressum</a>
             </p>
             <p>&copy; 2024 Philipp Uhlendorf</p>
             <p>
-                <a href="..//html/Datenschutz.html">Datenschutz</a>
+                <a href="../html/Datenschutz.html">Datenschutz</a>
             </p>
         </footer>
 
