--- a/html/not_available.html
+++ b/html/not_available.html
@@ -8,16 +8,9 @@
     </head>
 
     <body>
-        <section>
-            <center><img src="..//pictures/in-progress.png"></center>
-            <h1><b><center>404 NOT FOUND</center></b></h1>
-            <p><center><br><a href="..//html/Homepage.html">Back</a></center></p>
-        </section>
-
-
-        <footer>
-            <p><center>&copy; 2024 Philipp Uhlendorf.   All rights reserved.</center></p>
-        </footer>
     </body>
-
+    <script>
+        alert("Error: 404 NOT FOUND")
+        location.href="../html/Homepage.html"
+        </script>
 </html>
