--- a/html/Impressum.html
+++ b/html/Impressum.html
@@ -15,7 +15,8 @@
             <select id="mainselect">
                 <option value="(Auswahl)" selected ="selected">(Auswahl)</option>
                 <option value="../html/Homepage.html">Home</option>
-                <option value="../html/not_available.html">Wetterkarte</option>
+                <option value="../html/Wetterkarte.html">Wetterkarte</option>
+                <option value="../html/not_available.html">Wetterdaten</option>
             </select>
         </header>
 
