--- a/html/Homepage.html
+++ b/html/Homepage.html
@@ -36,11 +36,11 @@
                     <img src="https://s3.eu-central-1.amazonaws.com/app-prod-static.warnwetter.de/v16/gemeinde_warning_overview.png">
                 </div>
                 <div id="testtext">
-                    <div id="warnungen"></div>
-                    <script src="../js/warning.js"></script>     
+                    <!--<div id="warnungen"></div>
+                    <script src="../js/warning.js"></script>  -->   
                     
                     <div id="output"></div><!-- Aktuell: Frankfurt/Main (Terminal) Stations ID = 1423    Stationskennung = 02559 -->
-                    <script src="../js/stadtiondaten.js"></script>
+                    <script src="../js/stationdata.js"></script>
                 </div>
             </div>
 
